# Anchy-English

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  Procfile.dev  README.md  TESTING.md  baza.py  baza.sqlite  config.py  db_cluster-13-09-2025@00-42-10.backup  dev.py  dict.txt  ideas.md  package.json  pyproject.toml  pytest.ini  requirements.txt  server.py
.claude/skills/test-ui/: SKILL.md
anchy-english-vue/: README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js  vitest.config.js
anchy-english-vue/anchy-english-vue/: package-lock.json  package.json
anchy-english-vue/src/: App.vue  style.css
anchy-english-vue/src/__tests__/: gameUtils.test.js  useMatchGame.test.js
anchy-english-vue/src/api/: categories.js  exerciseSets.js  words.js  worksheets.js
anchy-english-vue/src/assets/: main.css
app/: baza.py  category.html  config.py  index.html  server.py  wordDisplay.html  words.js
app/css/: app.css
app/js/: app.js  controllers.js  directives.js  services.js
app/partials/: partial1.html  partial2.html  partial3.html
docs/: game-mechanics.md  word-match-game-tests.md  word-match-game.md
scripts/: README.md  create_multi_blank_exercises.py  create_proper_exercises.py  create_sample_exercises.py  fix_exercise_templates.py  fix_family_exercises.py  fix_family_exercises_v2.py  reset_and_create_exercises.py  seed_4razred.py  seed_worksheets.py  simple_exercises.py  update_exercises.py
templates/: index.html  vue_app.html
tests/: conftest.py  test_api.py  test_models.py
web/: category.html  drawer.js  wordDisplay.html
web/css/: app.css
web/js/: app.js  controllers.js  directives.js  services.js
web/partials/: partial1.html  partial2.html  partial3.html
(+39 files in other folders)
