[project]
name = "anchy-english"
version = "0.1.0"
description = "English-Slovene vocabulary learning application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.0",
    "flask-sqlalchemy==3.1.1",
    "sqlalchemy==2.0.36",
    "granian>=1.6.3",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.1",
    "werkzeug==3.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-flask==1.3.0",
    "ruff==0.8.4",
    "ty",
]

[tool.ty.rules]
unsupported-base = "ignore"   # Flask-SQLAlchemy db.Model not understood by ty
invalid-assignment = "ignore" # SQLAlchemy mapped_column descriptors confuse ty

[tool.ty.src]
exclude = [
    "create_*.py",
    "fix_*.py",
    "reset_*.py",
    "simple_*.py",
    "update_*.py",
    "remove_*.py",
]
