[project]
name = "anchy-english"
version = "0.1.0"
description = "English-Slovene vocabulary learning application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.3",
    "flask-sqlalchemy==3.1.1",
    "sqlalchemy==2.0.48",
    "granian>=1.6.3",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.2.2",
    "werkzeug==3.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-flask==1.3.0",
    "ruff==0.15.8",
    "ty",
]

[tool.ty.rules]
unsupported-base = "ignore"   # Flask-SQLAlchemy db.Model not understood by ty
invalid-assignment = "ignore" # SQLAlchemy mapped_column descriptors confuse ty

[tool.ty.src]
exclude = [
    "create_*.py",
    "fix_*.py",
    "reset_*.py",
    "simple_*.py",
    "update_*.py",
    "remove_*.py",
    "scripts/",
]

[dependency-groups]
dev = [
    "honcho>=2.0.0",
]
